--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin W</title>
-    <link rel="stylesheet" href="/style/reset.css">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <div class="wrapper-content">
@@ -13,7 +13,7 @@
             <div class="hero-section_decorate"></div>
             <nav class="hero-section-nav _container">
                 <div class="nav_logo">
-                    <img src="/img/logo.svg" alt="">
+                    <img src="./img/logo.svg" alt="">
                 </div>
                 <div class="nav_menu">
                     <ul>
@@ -36,6 +36,6 @@
             </div>
         </header>
     </div>
-    <script src="app.js"></script>
+    <script src=".app.js"></script>
 </body>
 </html>
