slide script, change header

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </div>
             </nav>
             <div class="hero-section_content">
-                <div class="hero-section_content_card">
-                    <div class="hero-section_content_card_front"></div>
-                    <div class="hero-section_content_card_back"></div>
+                <div class="hero-section_content_slider">
+                    <div class="hero-section_content_slider_slide hero-section_content_slider_slide_1 _show"></div>
+                    <div class="hero-section_content_slider_slide hero-section_content_slider_slide_2"></div>
                 </div>
                 <div>
                     <h1><b>I’m Robin Williams. A&#160;Product Designer <span>based in&#160;Italy.</span></b></h1>
@@ -36,6 +36,6 @@
             </div>
         </header>
     </div>
-    <script src=".app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
