--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <div class="hero-section_content_slider_slide hero-section_content_slider_slide_2"></div>
                 </div>
                 <div>
-                    <h1><b>I’m Robin Williams. A&#160;Product Designer <span>based in&#160;Italy.</span></b></h1>
-                    <p>I’m probably the most passionate designer you will ever get to work with. If&#160;you have a&#160;great project that needs some amazing skills, I’m your guy.</p>
+                    <h1><b>I&#39;m Robin Williams. A&#160;Product Designer <span>based in&#160;Italy.</span></b></h1>
+                    <p>I&#39;m probably the most passionate designer you will ever get to work with. If&#160;you have a&#160;great project that needs some amazing skills, I&#39;m your guy.</p>
                 </div>
             </div>
         </header>
