correct path js

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             </div>
         </header>
     </div>
-    <script src="./app.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
