--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin W</title>
+    <link rel="stylesheet" href="/assets/font/Sen-Regular.ttf">
+    <link rel="stylesheet" href="/assets/font/Sen-Bold.ttf">
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -36,6 +38,6 @@
             </div>
         </header>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
