second section and script for title

--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
                 </div>
             </div>
         </header>
+        <section class="experience-section _container">
+            <p class="experience-section_subtitle"><b>work experience</b></p>
+            <h2 class="experience-section_title">Companies I have worked for in the past</h2>
+            <div class="experience-section_items">
+                <div class="experience-section_items_card">
+                    <p>01</p>
+                    <p><b><span>Google</span>, Interaction Designer</b></p>
+                    <p>I currently am the lead designer on&#160;the interaction design team for&#160;Google Play.</p>
+                </div>
+                <div class="experience-section_items_card">
+                    <p>02</p>
+                    <p><b><span>Facebook</span>, Product Designer</b></p>
+                    <p>I&#39;ve worked on&#160;a&#160;wide variety of internal tools for facebook over the&#160;past 6 years.</p>
+                </div>
+                <div class="experience-section_items_card">
+                    <p>03</p>
+                    <p><b><span>Dribbble</span>, Graphic Designer</b></p>
+                    <p>I started my design career with Dribbble. I was incharge of&#160;creating illustrations for the&#160;platform.</p>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="app.js"></script>
 </body>
