make values section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
                 </div>
             </div>
         </section>
+        <section class="philosophy-section _container">
+            <div class="philosophy-section_left">
+                <h2 class="philosophy-section_left_title"><b>Philosophy &amp; values</b></h2>
+                <p class="philosophy-section_left_text">I think everyone wants the&#160;same thing &#8209; relationship with humanity, peace with the&#160;metaphysical, and&#160;experience with the universe. I try to&#160;grasp these things with my values: authenticity, creativity, &amp; hospitality.</p>
+                <button class="philosophy-section_left_btn">
+                    <p class="philosophy-section_left_btn_text">More about me</p>
+                </button>
+            </div>
+            <div class="philosophy-section_right">
+                <div class="philosophy-section_right_front _show">
+                    <div></div>
+                </div>
+                <div class="philosophy-section_right_back">
+                    <p>
+                        My philosophy in&#160;work is&#160;simple: do what you love and&#160;love what you do. I believe that if&#160;you are passionate about what you do, you will always find motivation and inspiration to&#160;keep going.
+                    </p>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="app.js"></script>
 </body>
