add photo, start section skills

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="hero-section_content_slider_slide hero-section_content_slider_slide_1 _show"></div>
                     <div class="hero-section_content_slider_slide hero-section_content_slider_slide_2"></div>
                 </div>
-                <div>
+                <div class="hero-section_content_text">
                     <h1><b>I&#39;m Robin Williams. A&#160;Product Designer <span>based in&#160;Italy.</span></b></h1>
                     <p>I&#39;m probably the most passionate designer you will ever get to work with. If&#160;you have a&#160;great project that needs some amazing skills, I&#39;m your guy.</p>
                 </div>
@@ -68,12 +68,52 @@
             </div>
             <div class="philosophy-section_right">
                 <div class="philosophy-section_right_front _show">
-                    <div></div>
                 </div>
                 <div class="philosophy-section_right_back">
                     <p>
                         My philosophy in&#160;work is&#160;simple: do what you love and&#160;love what you do. I believe that if&#160;you are passionate about what you do, you will always find motivation and inspiration to&#160;keep going.
                     </p>
+                </div>
+            </div>
+        </section>
+        <section class="skills-section _container">
+            <div class="skills-section_up-section">
+                <div class="skills-section_up-section_left">
+                    <div>
+                        <h2 class="skills-section_up-section_left_title">Skillset</h2>
+                        <p>With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.</p>
+                    </div>
+                    <div></div>
+                </div>
+                <div class="skills-section_up-section_right">
+                    <div class="skills-section_up-section_right_card">
+                        <div class="skills-section_up-section_right_card_inside">
+                            <img src="./img/skillsItemOne.svg" alt="">
+                            <h3><b>Product Design</b></h3>
+                            <p>Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+                        </div>
+                    </div>
+                    <div class="skills-section_up-section_right_card">
+                        <div class="skills-section_up-section_right_card_inside">
+                            <img src="./img/skillsItemTwo.svg" alt="">
+                            <h3><b>Visual Design</b></h3>
+                            <p>My experience at dribbble has helped me learn to develop the eye for design. Colors, typography, layout and the whole package.</p>
+                        </div>
+                    </div>
+                    <div class="skills-section_up-section_right_card">
+                        <div class="skills-section_up-section_right_card_inside">
+                            <img src="./img/skillsItemThree.svg" alt="">
+                            <h3><b>Motion Design</b></h3>
+                            <p>I started my design journey with motion design in my college days. Motion is something that really fascinates me because of the flexibility of story telling. </p>
+                        </div>
+                    </div>
+                    <div class="skills-section_up-section_right_card">
+                        <div class="skills-section_up-section_right_card_inside">
+                            <img src="./img/skillsItemFour.svg" alt="">
+                            <h3><b>Photography</b></h3>
+                            <p>Clicking pictures really brings out the creative in me. Phtography really makes you look and percieve things in a different way.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
