make down-section in skills

--- a/index.html
+++ b/index.html
@@ -90,28 +90,66 @@
                         <div class="skills-section_up-section_right_card_inside">
                             <img src="./img/skillsItemOne.svg" alt="">
                             <h3><b>Product Design</b></h3>
-                            <p>Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+                            <p>Working at&#160;Facebook has taught me a&#160;lot about how to&#160;understand users, solve problems and&#160;build great products.</p>
                         </div>
                     </div>
                     <div class="skills-section_up-section_right_card">
                         <div class="skills-section_up-section_right_card_inside">
                             <img src="./img/skillsItemTwo.svg" alt="">
                             <h3><b>Visual Design</b></h3>
-                            <p>My experience at dribbble has helped me learn to develop the eye for design. Colors, typography, layout and the whole package.</p>
+                            <p>My experience at&#160;dribbble has helped me learn to&#160;develop the&#160;eye for design. Colors, typography, layout and&#160;the&#160;whole package.</p>
                         </div>
                     </div>
                     <div class="skills-section_up-section_right_card">
                         <div class="skills-section_up-section_right_card_inside">
                             <img src="./img/skillsItemThree.svg" alt="">
                             <h3><b>Motion Design</b></h3>
-                            <p>I started my design journey with motion design in my college days. Motion is something that really fascinates me because of the flexibility of story telling. </p>
+                            <p>I started my design journey with motion design in&#160;my college days. Motion is&#160;something that really fascinates me because of&#160;the&#160;flexibility of&#160;story telling. </p>
                         </div>
                     </div>
                     <div class="skills-section_up-section_right_card">
                         <div class="skills-section_up-section_right_card_inside">
                             <img src="./img/skillsItemFour.svg" alt="">
                             <h3><b>Photography</b></h3>
-                            <p>Clicking pictures really brings out the creative in me. Phtography really makes you look and percieve things in a different way.</p>
+                            <p>Clicking pictures really brings out the&#160;creative in&#160;me. Phtography really makes you look and percieve things in&#160;a&#160;different way.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills-section_up-section_down-section">
+                <div class="skills-section_up-section_down-section_items-wrap">
+                    <div class="skills-section_up-section_down-section_items-wrap_items skills-section_up-section_down-section_items-wrap_marquee">
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeOne.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeTwo.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeThree.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeFour.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeFive.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="skills-section_up-section_down-section_items-wrap_items skills-section_up-section_down-section_items-wrap_marquee">
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeOne.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeTwo.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeThree.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeFour.svg" alt="">
+                        </div>
+                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                            <img src="./img/marqueeFive.svg" alt="">
                         </div>
                     </div>
                 </div>
