--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <div class="wrapper-content">
-        <header class="hero-section _container">
+    <div class="_container">
+        <header class="hero-section">
             <div class="hero-section_decorate"></div>
-            <nav class="hero-section-nav _container">
-                <div class="nav_logo">
+            <nav class="nav _container">
+                <div class="nav__logo">
                     <img src="./img/logo.svg" alt="">
                 </div>
-                <div class="nav_menu">
+                <div class="nav__menu">
                     <ul>
                         <li>Experience</li>
                         <li>Work</li>
@@ -26,47 +26,47 @@
                     </ul>
                 </div>
             </nav>
-            <div class="hero-section_content">
-                <div class="hero-section_content_slider">
-                    <div class="hero-section_content_slider_slide hero-section_content_slider_slide_1 _show"></div>
-                    <div class="hero-section_content_slider_slide hero-section_content_slider_slide_2"></div>
+            <div class="hero-section__content">
+                <div class="hero-section__slider">
+                    <div class="hero-section__slide hero-section__slide_1 _show"></div>
+                    <div class="hero-section__slide hero-section__slide_2"></div>
                 </div>
-                <div class="hero-section_content_text">
+                <div class="hero-section__text">
                     <h1><b>I&#39;m Robin Williams. A&#160;Product Designer <span>based in&#160;Italy.</span></b></h1>
                     <p>I&#39;m probably the most passionate designer you will ever get to work with. If&#160;you have a&#160;great project that needs some amazing skills, I&#39;m your guy.</p>
                 </div>
             </div>
         </header>
-        <section class="experience-section _container">
-            <p class="experience-section_subtitle"><b>work experience</b></p>
-            <h2 class="experience-section_title">Companies I have worked for in the past</h2>
-            <div class="experience-section_items">
-                <div class="experience-section_items_card">
+        <section class="experience-section">
+            <p class="experience-section__subtitle"><b>work experience</b></p>
+            <h2 class="experience-section__title">Companies I have worked for in the past</h2>
+            <div class="experience-section__items">
+                <div class="experience-section__card">
                     <p>01</p>
                     <p><b><span>Google</span>, Interaction Designer</b></p>
                     <p>I currently am the lead designer on&#160;the interaction design team for&#160;Google Play.</p>
                 </div>
-                <div class="experience-section_items_card">
+                <div class="experience-section__card">
                     <p>02</p>
                     <p><b><span>Facebook</span>, Product Designer</b></p>
                     <p>I&#39;ve worked on&#160;a&#160;wide variety of internal tools for facebook over the&#160;past 6 years.</p>
                 </div>
-                <div class="experience-section_items_card">
+                <div class="experience-section__card">
                     <p>03</p>
                     <p><b><span>Dribbble</span>, Graphic Designer</b></p>
                     <p>I started my design career with Dribbble. I was incharge of&#160;creating illustrations for the&#160;platform.</p>
                 </div>
             </div>
         </section>
-        <section class="philosophy-section _container">
-            <div class="philosophy-section_left">
+        <section class="philosophy-section">
+            <div class="philosophy-section-left-side">
                 <h2 class="philosophy-section_left_title"><b>Philosophy &amp; values</b></h2>
                 <p class="philosophy-section_left_text">I think everyone wants the&#160;same thing &#8209; relationship with humanity, peace with the&#160;metaphysical, and&#160;experience with the universe. I try to&#160;grasp these things with my values: authenticity, creativity, &amp; hospitality.</p>
                 <button class="philosophy-section_left_btn">
                     <p class="philosophy-section_left_btn_text">More about me</p>
                 </button>
             </div>
-            <div class="philosophy-section_right">
+            <div class="philosophy-section-right-side">
                 <div class="philosophy-section_right_front _show">
                 </div>
                 <div class="philosophy-section_right_back">
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills-section _container">
+        <section class="skills-section">
             <div class="skills-section_up-section">
                 <div class="skills-section_up-section_left">
                     <div>
