--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         </section>
         <section class="philosophy-section">
             <div class="philosophy-section-left-side">
-                <h2 class="philosophy-section_left_title"><b>Philosophy &amp; values</b></h2>
-                <p class="philosophy-section_left_text">I think everyone wants the&#160;same thing &#8209; relationship with humanity, peace with the&#160;metaphysical, and&#160;experience with the universe. I try to&#160;grasp these things with my values: authenticity, creativity, &amp; hospitality.</p>
-                <button class="philosophy-section_left_btn">
-                    <p class="philosophy-section_left_btn_text">More about me</p>
+                <h2 class="philosophy-section-left-side__title"><b>Philosophy &amp; values</b></h2>
+                <p class="philosophy-section-left-side__text">I think everyone wants the&#160;same thing &#8209; relationship with humanity, peace with the&#160;metaphysical, and&#160;experience with the universe. I try to&#160;grasp these things with my values: authenticity, creativity, &amp; hospitality.</p>
+                <button class="philosophy-section-left-side__btn">
+                    <p class="philosophy-section-left-side__btn-text">More about me</p>
                 </button>
             </div>
             <div class="philosophy-section-right-side">
-                <div class="philosophy-section_right_front _show">
+                <div class="philosophy-section-right-side__front _show">
                 </div>
-                <div class="philosophy-section_right_back">
+                <div class="philosophy-section-right-side__back">
                     <p>
                         My philosophy in&#160;work is&#160;simple: do what you love and&#160;love what you do. I believe that if&#160;you are passionate about what you do, you will always find motivation and inspiration to&#160;keep going.
                     </p>
@@ -77,38 +77,38 @@
             </div>
         </section>
         <section class="skills-section">
-            <div class="skills-section_up-section">
-                <div class="skills-section_up-section_left">
+            <div class="skills-section__up-section">
+                <div class="skills-section-left-side">
                     <div>
-                        <h2 class="skills-section_up-section_left_title">Skillset</h2>
+                        <h2 class="skills-section-left-side__title">Skillset</h2>
                         <p>With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.</p>
                     </div>
                     <div></div>
                 </div>
-                <div class="skills-section_up-section_right">
-                    <div class="skills-section_up-section_right_card">
-                        <div class="skills-section_up-section_right_card_inside">
+                <div class="skills-section-right-side">
+                    <div class="skills-section-right-side__card">
+                        <div class="skills-section-right-side__inside">
                             <img src="./img/skillsItemOne.svg" alt="">
                             <h3><b>Product Design</b></h3>
                             <p>Working at&#160;Facebook has taught me a&#160;lot about how to&#160;understand users, solve problems and&#160;build great products.</p>
                         </div>
                     </div>
-                    <div class="skills-section_up-section_right_card">
-                        <div class="skills-section_up-section_right_card_inside">
+                    <div class="skills-section-right-side__card">
+                        <div class="skills-section-right-side__inside">
                             <img src="./img/skillsItemTwo.svg" alt="">
                             <h3><b>Visual Design</b></h3>
                             <p>My experience at&#160;dribbble has helped me learn to&#160;develop the&#160;eye for design. Colors, typography, layout and&#160;the&#160;whole package.</p>
                         </div>
                     </div>
-                    <div class="skills-section_up-section_right_card">
-                        <div class="skills-section_up-section_right_card_inside">
+                    <div class="skills-section-right-side__card">
+                        <div class="skills-section-right-side__inside">
                             <img src="./img/skillsItemThree.svg" alt="">
                             <h3><b>Motion Design</b></h3>
                             <p>I started my design journey with motion design in&#160;my college days. Motion is&#160;something that really fascinates me because of&#160;the&#160;flexibility of&#160;story telling. </p>
                         </div>
                     </div>
-                    <div class="skills-section_up-section_right_card">
-                        <div class="skills-section_up-section_right_card_inside">
+                    <div class="skills-section-right-side__card">
+                        <div class="skills-section-right-side__inside">
                             <img src="./img/skillsItemFour.svg" alt="">
                             <h3><b>Photography</b></h3>
                             <p>Clicking pictures really brings out the&#160;creative in&#160;me. Phtography really makes you look and percieve things in&#160;a&#160;different way.</p>
@@ -116,39 +116,39 @@
                     </div>
                 </div>
             </div>
-            <div class="skills-section_up-section_down-section">
-                <div class="skills-section_up-section_down-section_items-wrap">
-                    <div class="skills-section_up-section_down-section_items-wrap_items skills-section_up-section_down-section_items-wrap_marquee">
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+            <div class="skills-section__down-section">
+                <div class="skills-section__items-wrap">
+                    <div class="skills-section__items skills-section__marquee">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeOne.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeTwo.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeThree.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeFour.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeFive.svg" alt="">
                         </div>
                     </div>
-                    <div class="skills-section_up-section_down-section_items-wrap_items skills-section_up-section_down-section_items-wrap_marquee">
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                    <div class="skills-section__items skills-section__marquee">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeOne.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeTwo.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeThree.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeFour.svg" alt="">
                         </div>
-                        <div class="skills-section_up-section_down-section_items-wrap_item">
+                        <div class="skills-section__item">
                             <img src="./img/marqueeFive.svg" alt="">
                         </div>
                     </div>
