start project-section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,17 @@
                 </div>
             </div>
         </section>
+        <section class="project-section">
+            <div class="project-section__up-section">
+                <div class="project-section-left-side">
+                    <p>MY PROJECTS</p>
+                    <h3><b>Work that I&#39;ve done for the&#160;past 8 years</b></h3>
+                </div>
+                <div class="project-section-right-side">
+                    
+                </div>
+            </div>
+        </section>
     </div>
     <script src="app.js"></script>
 </body>
