change menu & add script

--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
                 </div>
                 <div class="nav__menu">
                     <ul>
-                        <li>Experience</li>
-                        <li>Work</li>
-                        <li>Photography</li>
-                        <li>Contact</li>
+                        <a href="#experience" class="nav__link">
+                            <li>Experience</li>
+                        </a>
+                        <a href="#work" class="nav__link">
+                            <li>Work</li>
+                        </a>
+                        <a href="#" class="nav__link">
+                            <li>Photography</li>
+                        </a>
+                        <a href="#" class="nav__link">
+                            <li>Contact</li>
+                        </a>
                     </ul>
                 </div>
             </nav>
@@ -37,7 +45,7 @@
                 </div>
             </div>
         </header>
-        <section class="experience-section">
+        <section class="experience-section" data-tab="experience">
             <p class="experience-section__subtitle"><b>work experience</b></p>
             <h2 class="experience-section__title">Companies I have worked for in the past</h2>
             <div class="experience-section__items">
@@ -155,7 +163,7 @@
                 </div>
             </div>
         </section>
-        <section class="project-section">
+        <section class="project-section" data-tab="work">
             <div class="project-section__up-section">
                 <div class="project-section-left-side">
                     <p>MY PROJECTS</p>
