change script & correct validation

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin W</title>
-    <link rel="stylesheet" href="/assets/font/Sen-Regular.ttf">
-    <link rel="stylesheet" href="/assets/font/Sen-Bold.ttf">
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -18,20 +16,23 @@
                     <img src="./img/logo.svg" alt="">
                 </div>
                 <div class="nav__menu">
-                    <ul>
+                    <div>
                         <a href="#experience" class="nav__link">
-                            <li>Experience</li>
+                            <p>Experience</p>
+                        </a>
+                        <a href="#skillset" class="nav__link">
+                            <p>Skillset</p>
+                        </a>
+                        <a href="#" class="nav__link">
+                            <p>Photography</p>
                         </a>
                         <a href="#work" class="nav__link">
-                            <li>Work</li>
+                            <p>Work</p>
                         </a>
                         <a href="#" class="nav__link">
-                            <li>Photography</li>
+                            <p>Contact</p>
                         </a>
-                        <a href="#" class="nav__link">
-                            <li>Contact</li>
-                        </a>
-                    </ul>
+                    </div>
                 </div>
             </nav>
             <div class="hero-section__content">
@@ -70,8 +71,7 @@
             <div class="philosophy-section-left-side">
                 <h2 class="philosophy-section-left-side__title"><b>Philosophy &amp; values</b></h2>
                 <p class="philosophy-section-left-side__text">I think everyone wants the&#160;same thing &#8209; relationship with humanity, peace with the&#160;metaphysical, and&#160;experience with the universe. I try to&#160;grasp these things with my values: authenticity, creativity, &amp; hospitality.</p>
-                <button class="philosophy-section-left-side__btn">
-                    <p class="philosophy-section-left-side__btn-text">More about me</p>
+                <button class="philosophy-section-left-side__btn">More about me
                 </button>
             </div>
             <div class="philosophy-section-right-side">
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills-section">
+        <section class="skills-section" data-tab="skillset">
             <div class="skills-section__up-section">
                 <div class="skills-section-left-side">
                     <div>
