change link in nav-menu

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                         <a href="#experience" class="nav__link">
                             <p>Experience</p>
                         </a>
+                        <a href="#philosophy" class="nav__link">
+                            <p>Philosophy</p>
+                        </a>
                         <a href="#skillset" class="nav__link">
                             <p>Skillset</p>
                         </a>
@@ -67,7 +70,7 @@
                 </div>
             </div>
         </section>
-        <section class="philosophy-section">
+        <section class="philosophy-section" data-tab="philosophy">
             <div class="philosophy-section-left-side">
                 <h2 class="philosophy-section-left-side__title"><b>Philosophy &amp; values</b></h2>
                 <p class="philosophy-section-left-side__text">I think everyone wants the&#160;same thing &#8209; relationship with humanity, peace with the&#160;metaphysical, and&#160;experience with the universe. I try to&#160;grasp these things with my values: authenticity, creativity, &amp; hospitality.</p>
