make work section

--- a/index.html
+++ b/index.html
@@ -167,13 +167,40 @@
             </div>
         </section>
         <section class="project-section" data-tab="work">
-            <div class="project-section__up-section">
-                <div class="project-section-left-side">
+            <div class="project-section-up-section">
                     <p>MY PROJECTS</p>
-                    <h3><b>Work that I&#39;ve done for the&#160;past 8 years</b></h3>
+                    <h2 class="project-section-up-section__title">
+                        Work that I've done
+                    </h2>
+            </div>
+            <div class="project-section-down-section">
+                <div class="project-section-down-section__card">
+                    <img src="./img/projectRest.png" alt="">
+                    <div>
+                        <h3>Restaurant Website Design</h3>
+                        <p>I worked with the guys at CBRE to redesign their entire website and mobile app fro both Android and iOS. This project lasted for 4 months and was a very challenging one.</p>
+                    </div>
                 </div>
-                <div class="project-section-right-side">
-                    
+                <div class="project-section-down-section__card">
+                    <img src="./img/profectCoin.png" alt="">
+                    <div>
+                        <h3>Coin App Development</h3>
+                        <p>The money app is designed to help you manage your finances more efficiently and effectively. With our app, you can easily track your spending, budget, and savings goals.</p>
+                    </div>
+                </div>
+                <div class="project-section-down-section__card">
+                    <img src="./img/projectBalaz.png" alt="">
+                    <div>
+                        <h3>Banking App</h3>
+                        <p>The bank app provides a variety of features to help users manage their finances. </p>
+                    </div>
+                </div>
+                <div class="project-section-down-section__card">
+                    <img src="./img/projectDribbble.png" alt="">
+                    <div>
+                        <h3>Dribbble Profile Design</h3>
+                        <p>Dribbble is a website where designers and developers showcase their work to a global audience.</p>
+                    </div>
                 </div>
             </div>
         </section>
